# codeslayer.autotools-plugin

./: Makefile.am  Makefile.in  autotools.codeslayer-plugin.in  configure  configure.ac
.codeslayer/: autotools.conf  ctags.conf
m4/.svn/: all-wcprops  entries
src/: Makefile.am  Makefile.in  autotools-config.c  autotools-config.h  autotools-configuration.c  autotools-configuration.h  autotools-engine.c  autotools-engine.h  autotools-menu.c  autotools-notebook-page.c  autotools-notebook-tab.c  autotools-notebook.c  autotools-notebook.h  autotools-output.c  autotools-output.h  autotools-plugin.c  autotools-project-properties.c  autotools-project-properties.h  autotools-projects-popup.c
src/.svn/: all-wcprops  entries
src/.svn/text-base/: Makefile.in.svn-base  autotools-configuration.c.svn-base  autotools-engine.c.svn-base  autotools-plugin.c.svn-base
