lib_LTLIBRARIES = libautotoolscodeslayerplugin.la

libautotoolscodeslayerplugin_la_SOURCES = \
    autotools-plugin.c \
    autotools-output.h \
    autotools-output.c \
    autotools-notebook.h \
    autotools-notebook.c \
    autotools-projects-popup.h \
    autotools-projects-popup.c \
    autotools-project-properties.h \
    autotools-project-properties.c \
    autotools-notebook-page.h \
    autotools-notebook-page.c \
    autotools-notebook-tab.h \
    autotools-notebook-tab.c \
    autotools-configuration.h \
    autotools-configuration.c \
    autotools-engine.h \
    autotools-engine.c \
    autotools-menu.h \
    autotools-menu.c

libautotoolscodeslayerplugin_la_CPPFLAGS = $(AUTOTOOLSCODESLAYERPLUGIN_CFLAGS) -I$(top_srcdir) -I$(srcdir)
